bindings/c/whiteout_mdx.h

typedef struct whiteout_MdxTextureAnimation whiteout_MdxTextureAnimation;
typedef struct whiteout_MdxTrackVector3f whiteout_MdxTrackVector3f;
typedef struct whiteout_MdxTrackQuaternion whiteout_MdxTrackQuaternion;
/* ── MdxTextureAnimation ─────────────────────────────────────────────── */

/* UV coordinate animation */
/*  */
/* Texture animations transform UV coordinates over time, creating effects like scrolling water, rotating symbols, etc. */
whiteout_MdxTextureAnimation* whiteout_mdx_MdxTextureAnimation_new(void);
void whiteout_mdx_MdxTextureAnimation_delete(whiteout_MdxTextureAnimation* self);
/* UV translation animation */
whiteout_MdxTrackVector3f* whiteout_mdx_MdxTextureAnimation_get_translationTracks(whiteout_MdxTextureAnimation* self);
void whiteout_mdx_MdxTextureAnimation_set_translationTracks(whiteout_MdxTextureAnimation* self, const whiteout_MdxTrackVector3f* value);
/* UV rotation animation (quaternion XYZW) */
whiteout_MdxTrackQuaternion* whiteout_mdx_MdxTextureAnimation_get_rotationTracks(whiteout_MdxTextureAnimation* self);
void whiteout_mdx_MdxTextureAnimation_set_rotationTracks(whiteout_MdxTextureAnimation* self, const whiteout_MdxTrackQuaternion* value);
/* UV scaling animation */
whiteout_MdxTrackVector3f* whiteout_mdx_MdxTextureAnimation_get_scalingTracks(whiteout_MdxTextureAnimation* self);
void whiteout_mdx_MdxTextureAnimation_set_scalingTracks(whiteout_MdxTextureAnimation* self, const whiteout_MdxTrackVector3f* value);