bindings/java/src/main/java/whiteout/mdx/internal/Native.java


    // -- MdxTextureAnimation --
    public static final MethodHandle whiteout_mdx_MdxTextureAnimation_new = find(
        "whiteout_mdx_MdxTextureAnimation_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTextureAnimation_delete = find(
        "whiteout_mdx_MdxTextureAnimation_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTextureAnimation_get_translationTracks = find("whiteout_mdx_MdxTextureAnimation_get_translationTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTextureAnimation_set_translationTracks = find("whiteout_mdx_MdxTextureAnimation_set_translationTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTextureAnimation_get_rotationTracks = find("whiteout_mdx_MdxTextureAnimation_get_rotationTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTextureAnimation_set_rotationTracks = find("whiteout_mdx_MdxTextureAnimation_set_rotationTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTextureAnimation_get_scalingTracks = find("whiteout_mdx_MdxTextureAnimation_get_scalingTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTextureAnimation_set_scalingTracks = find("whiteout_mdx_MdxTextureAnimation_set_scalingTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
